# ch-chaos

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile
.claude/: settings.local.json
.claude/skills/add-scenario/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/review-conventions/: SKILL.md
.claude/skills/validate-arch/: SKILL.md
.github/workflows/: build-push-ecr.yml  ci.yml
deploy/: crds.yaml  deploy.sh  operator.yaml  rbac.yaml
docs/: arch.md  dashboard.md  l3-architecture.html  l4-architecture.html
examples/: analysis-latency.yaml  cpu-stress.yaml  demo-edge-delay.yaml  demo-pod-killer.yaml  edge-abort.yaml  edge-delay.yaml  impact-map.yaml  network-delay.yaml  pod-killer.yaml
infra/: main.tf
src/: lib.rs  main.rs
src/operator/: analysis_reconciler.rs  controller.rs  crd.rs  graph_builder.rs  impact_map_reconciler.rs  istio_injector.rs  job_builder.rs  kube_client.rs  mod.rs  reconciler.rs  types.rs
src/runner/: entry.rs  metrics.rs  mod.rs  server.rs
src/runner/scenarios/: cpu_stress.rs  mod.rs  network_delay.rs  pod_killer.rs
tests/: analysis_reconciler_test.rs  crd_test.rs  e2e_mock_test.rs  graph_builder_test.rs  impact_map_reconciler_test.rs  istio_injector_test.rs  job_builder_test.rs  reconciler_test.rs  runner_metrics_test.rs  runner_scenarios_test.rs  types_test.rs
tests/e2e/: run.sh
tests/e2e/fixtures/: analysis-cartservice.yaml  pod-killer-cartservice.yaml
