[package]
name = "chimp-chaos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chimp-chaos"
path = "src/main.rs"

[dependencies]
# Kubernetes operator framework
kube = { version = "3.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server (runner metrics endpoint)
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus metrics
prometheus = "0.13"

# HTTP client (for Prometheus queries from GraphBuilder)
reqwest = { version = "0.12", features = ["json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# UUID for ExperimentId
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"
